--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 	<div class="buttons">
 		<input type="button" onclick="chooseMap()" value="Choose size map!" class="button-one">
 		<input type="button" onclick="reset()" value="Clear, do it!" class="button-two">
-		<!--<input type="button">
-		<input type="button">-->
 	</div>
 	<main>
 		<div class="ChBox">
 			<div class="styleCh">
 				<button class="random btn" id="randomBtn" onclick="random()">Random</button>
 				<button class="default btn" onclick="defaultColor()" id="defaultColor">Black</button>
-				<button class="on-click btn" onclick="gradient()" id="gradient">Gradient</button>
+				<!--<button class="on-click btn" onclick="gradient()" id="gradient">Gradient</button>-->
 			</div>
 		</div>
 		<div class="wrapper">
